# catch-sis-harvester

./: .gitignore  LICENSE  README.md  pyproject.toml
cs_harvester/: collection.py  config.py  exceptions.py  harvest.py  harvest_log.py  lidvid.py  logger.py  network.py  process.py  registry.py
cs_harvester/add/: __init__.py  atlas.py  css.py  skymapper.py  spacewatch.py
cs_harvester/add/catch/: __init__.py  atlas.py  loneos.py  neat-maui-geodss.py  neat-palomar-tricam.py  ps1-dr2.py
daily-harvest/: _build_venv  daily-harvest.sh  update.sh
