[project]
name = "catch-sis-harvester"
description = "Metadata harvesting for the CATCH and SBN Survey Image Service tools"
readme = "README.md"
authors = [{ name = "Michael S. P. Kelley", email = "msk@astro.umd.edu" }]
license = { text = "BSD 3-Clause License" }
dependencies = [
    "numpy",
    "astropy>=6.1",
    "pds4_tools>=1.3",
    "catch>1.4",
    "sbn_survey_image_service",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "cs_harvester/version.py"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]

[project.scripts]
harvest-atlas = "cs_harvester.add.atlas:main"
harvest-skymapper = "cs_harvester.add.skymapper:main"
harvest-spacewatch = "cs_harvester.add.spacewatch:main"
harvest-css = "cs_harvester.add.css:main"
